--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ledgersmb (1.4.26+ds-0jessie1~1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Robert James Clay <jame@rocasa.us>  Sun, 13 Mar 2016 12:14:18 -0400
+
 ledgersmb (1.4.25+ds-0jessie1) jessie; urgency=medium
 
   * New upstream release.
