--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,10 @@
-ledgersmb (1.3.47-1~4) UNRELEASED; urgency=medium
+ledgersmb (1.3.47-1~5) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * Changes to debian/control:
+    - Set the Vcs-Browser URL to use 'https' instead of 'http'.
+    - Change texlive-xetex from 'Suggests' to 'Recommends' to work around issues
+      with using liblatex-driver-perl needed for printing.
   * Changes to debian/copyright:
     - Add 'Nick Prater' copyright information.
     - Correct spelling of 'Portugese' to 'Portuguese'.
@@ -12,19 +16,17 @@ ledgersmb (1.3.47-1~4) UNRELEASED; urgency=medium
     - Refresh debian/patches/10_httpdconf.patch for updated package.
   * Correct spelling of 'authorative' as 'authoritative' in the file
     debian/README.Debian.
-  * Change texlive-xetex from 'Suggests' to 'Recommends' in debian/control to
-    work around issues using liblatex-driver-perl needed for printing.
   * Changes to debian/ledgersmb.preinst and debian/ledgersmb.postrm:
     - Update the package version being checked for the apache config file rename
       to package version v1.3.18-2.
   * Changes to debian/ledgersmb.postinst:
     - Update the package version being checked for the apache config file rename
       to package version v1.3.18-2.
-    - Explicitly do 'db_stop' when operations with debconf have completed.
+    - Explicitly do 'db_stop' after operations with debconf have completed.
     - Rewrite how apache 2.4 modules are enabled. (Closes: #800036, #819481,
       LP#1513691)
 
- -- Robert James Clay <jame@rocasa.us>  Wed, 30 Mar 2016 16:36:35 -0500
+ -- Robert James Clay <jame@rocasa.us>  Thu, 31 Mar 2016 12:08:10 -0500
 
 ledgersmb (1.3.46-1~bpo8+1) jessie-backports; urgency=medium
 
