--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,20 @@
-ledgersmb (1.4.27+ds-0~1) UNRELEASED; urgency=medium
+ledgersmb (1.4.27+ds-0~2) UNRELEASED; urgency=medium
 
-  * Change the texlive-xetex package from a 'Suggests' to a 'Recommends' in
-    debian/control in order to work around issues that are caused by the
-    liblatex-driver package.
+  * New upstream release.
+  * Changes to debian/patches:
+    - Refresh debian/patches/10_httpdconf.patch for directory changes.
+    - Refresh debian/patches/05_confdir.patch for directory in changes.
+  * Changes in debian/control:
+    - Add 'starman' package as a 'Depends'.
+    - Change libplack-perl from a 'Suggests' to a 'Depends'.
+    - Change 'apache2 | httpd-cgi' from a 'Depends' to a 'Recommends'.
+    - Change libcgi-emulate-psgi-perl from a 'Suggests' to a 'Depends'.
+    - Change the texlive-xetex package from a 'Suggests' to a 'Recommends' in
+      order to work around issues that are caused by liblatex-driver package.
+  * Remove unnessessary v1.3.18-1 related stanza from debian/ledgersmb.preinst.
+  * Remove unneeded related to /var/lib/ledgersmb from debian/ledgersmb.postinst.
 
- -- Robert James Clay <jame@rocasa.us>  Sun, 10 Apr 2016 08:48:06 -0400
+ -- Robert James Clay <jame@rocasa.us>  Mon, 11 Apr 2016 10:16:40 -0400
 
 ledgersmb (1.4.26+ds-1) stable; urgency=medium
 
