--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ledgersmb (1.4.28+ds-0~1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Robert James Clay <jame@rocasa.us>  Mon, 02 May 2016 15:48:51 -0400
+
 ledgersmb (1.4.27+ds-0jessie1) jessie; urgency=medium
 
   * New upstream release.
