--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
-ledgersmb (1.5.18+ds-1~3) UNRELEASED; urgency=low
+ledgersmb (1.5.20+ds-1~1) UNRELEASED; urgency=low
 
   * TODO:
-    + Adapt package to the new 1.5.x series upstream.
+    + Adapt package for the new 1.5.x series upstream.
   * New series 1.5.x Upstream Release (Closes: #874664)
     + Along with an explicit requirement for liblatex-driver-perl >= 0.300.2,
       resolves the issue with printing to PDF or Postscript. (Closes: #821251)
@@ -20,7 +20,9 @@ ledgersmb (1.5.18+ds-1~3) UNRELEASED; urgency=low
     well as a new section specifically regarding accessing the application via
     a web proxy and otherwise updating it for the new upstream version.
   * Changes in debian/copyright:
-    + Add stanza for the 'debian/ledgersmb.default' file.
+    + Update copyright years as necessary for new upstream.
+    + Add a stanza for the 'debian/ledgersmb.default' file.
+    + Add 'David Godfrey' & 'Nick Prater' to the Core Team in the source stanza.
     + Correct the License entry in the 'debian/*' stanza to 'GPL-2+' and update
       its comment about why that was done.
     + Update 'Files-Excluded' in debian/copyright related to the embedded dojo
@@ -47,7 +49,7 @@ ledgersmb (1.5.18+ds-1~3) UNRELEASED; urgency=low
     + Update the example URL in the admin_password stanza.
     + Drop the debconf_install stanza but add a lsmb_proxy stanza.
 
- -- Robert James Clay <jame@rocasa.us>  Fri, 23 Mar 2018 21:39:13 -0400
+ -- Robert James Clay <jame@rocasa.us>  Sun, 15 Apr 2018 18:13:39 -0400
 
 ledgersmb (1.4.42+ds-1) unstable; urgency=low
 
