--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+ledgersmb (1.4.42+ds-2~1) UNRELEASED; urgency=medium
+
+  * Declare compliance with Debian Policy 4.1.4.
+  * Change the Priority in debian/control from "extra" back to "optional".
+  * Correct 'neccessary' as 'necessary' in debian/patches/05_confdir.patch.
+  * Change 'Maintainer' to "LedgerSMB Core Team <devel@lists.ledgersmb.org>" in
+    debian/control. (Closes: #899564)
+
+ -- Robert James Clay <jame@rocasa.us>  Thu, 31 May 2018 12:12:41 -0400
+
 ledgersmb (1.4.42+ds-1) unstable; urgency=low
 
   * New upstream release.
