--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ledgersmb (1.5.20+ds-1~7) UNRELEASED; urgency=low
+ledgersmb (1.5.21+ds-1~1) UNRELEASED; urgency=low
 
   * TODO:
     + Adapt package for the new 1.5.x series upstream.
@@ -28,13 +28,9 @@ ledgersmb (1.5.20+ds-1~7) UNRELEASED; urgency=low
     + Update 'Files-Excluded' in debian/copyright related to the embedded dojo
       files to reflect the new version 1.5.x series upstream.
   * Changes in debian/control:
-    + Declare compliance with Debian Policy 4.1.3.
-    + Change the Priority setting from 'extra' back to 'optional'.
     + Change debhelper Build-Depends from '>= 9' to '>= 9.20160709'.
     + Include as 'Depends': libmoosex-nonmoose-perl, libcgi-emulate-psgi-per',
       libplack-builder-conditionals-perl.
-    + Change 'Maintainer' to "LedgerSMB Core Team <devel@lists.ledgersmb.org>".
-      (Closes: #899564)
     + Update dojo requirement from libjs-dojo-dojox to libjs-dojo-dijit.
     + Drop explicit 'Depends' on 'liberror-perl' as not being necessary.
     + Drop 'libparse-recdescent-perl' as a Recommends as it is no longer needed.
@@ -50,7 +46,17 @@ ledgersmb (1.5.20+ds-1~7) UNRELEASED; urgency=low
     + Update the example URL in the admin_password stanza.
     + Drop the debconf_install stanza but add a lsmb_proxy stanza.
 
- -- Robert James Clay <jame@rocasa.us>  Wed, 30 May 2018 17:43:30 -0400
+ -- Robert James Clay <jame@rocasa.us>  Sat,  2 Jun 2018 14:25:17 -0400
+
+ledgersmb (1.4.42+ds-2) unstable; urgency=medium
+
+  * Declare compliance with Debian Policy 4.1.4.
+  * Change the Priority in debian/control from "extra" back to "optional".
+  * Correct 'neccessary' as 'necessary' in debian/patches/05_confdir.patch.
+  * Change 'Maintainer' to "LedgerSMB Core Team <devel@lists.ledgersmb.org>" in
+    debian/control. (Closes: #899564)
+
+ -- Robert James Clay <jame@rocasa.us>  Thu, 31 May 2018 16:52:03 -0400
 
 ledgersmb (1.4.42+ds-1) unstable; urgency=low
 
